@@ -26,7 +26,7 @@
   <script type="text/javascript" src="../phetcommon/js/util/check-assertions.js"></script>
 
   <!-- Simulation -->
-  <script data-main="js/molarity-config.js" src="lib/require-2.1.4.js"></script>
+  <script data-main="js/molarity-config.js" src="lib/require-2.1.6.js"></script>
 </head>
 <body>
 </body>
