@@ -1,3 +1,4 @@
+6/19/13 upgrade from require 2.1.4 to 2.1.6
 6/19/13 upgrade from jquery 1.9.1 to 2.0.2
 6/19/13 upgrade from lodash 1.2.1 to 1.3.1
 6/18/13 add 'allowTouchSnag: true' to drag handlers for slider thumbs
